--- a/component/css/home.css
+++ b/component/css/home.css
@@ -81,7 +81,7 @@ nav a:hover{
     flex-direction: column;
     margin: 3rem;
     margin-top: 4.5rem;
-    width: 1200px;
+    width: 1210px;
     height: 780px;
     mix-blend-mode: normal;
     border: 1px;
@@ -205,14 +205,15 @@ ul .slider{
             /* Welcome to Arch Studio   */
 
 .hero-welcome{
-    width: 200px;
-    display: flex;
-    margin-top: 6rem;
+    width: 969px;
+    height: 200px;
+    /* display: flex;
+    margin-top: 6rem; */
     margin-left: 8.5rem;
     font-weight: 700;
     font-size: 200px;
     line-height: 200px;
-    letter-spacing: -6px;
+    letter-spacing: 15px;
     color: #EEEFF4;
     z-index: 5;
 }
@@ -220,8 +221,8 @@ ul .slider{
 .arc-studio-text{
     display: flex;
     flex-direction: row-reverse;
-    gap: 120px;
-    width: 1110px;
+    gap: 228px;
+    width: 1215px;
     margin: 9rem;
     margin-top: -6.5rem;
 }
@@ -262,7 +263,7 @@ ul .slider{
 
 .image{
     display: flex;
-    width: 1110px;
+    width: 1200px;
     height: 550px;
     background-position: center center;
     justify-content: center;
@@ -272,16 +273,15 @@ ul .slider{
     margin-top: 15rem;
     background-size: cover;
     background-repeat: no-repeat;
-    background: url(/component/assets/home/desktop/image-small-team.jpg);
-    justify-content: center;
-    align-items: center center;
+    background-image: url(/component/assets/home/desktop/image-small-team.jpg);
+    align-items: center;
 }
 
 .overlay{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 1110px;
+    width: 1200px;
     height: 550px;
     background: hsla(0, 0%, 4%, 0.673);
 }
@@ -340,7 +340,7 @@ ul .slider{
 .wrapper-featured-arrow{
     display: flex;
     justify-content: space-between;
-    width: 1110px;
+    width: 1200px;
 }
 
 .text-lefts{
@@ -359,9 +359,9 @@ ul .slider{
 
 .wrapper-images{
     display: grid;
-    width: 1110px;
+    width: 1200px;
     grid-template-columns: auto auto auto;
-    gap: 30px;
+    gap: 75px;
     margin-top: 1rem;
     justify-content: center;
     align-items: center;
@@ -443,6 +443,11 @@ ul .slider{
     opacity: 0.75;
 }
 
+/* footer{
+    display: flex;
+    width: 1200px;
+} */
+
 .footer-container{
     display: flex;
     flex-direction: row;
@@ -450,7 +455,7 @@ ul .slider{
     margin-left: 8.8rem;
     background-color:#EEEFF4;
     box-sizing: border-box;
-    width: 984px; 
+    width: 1050px; 
     height:164px; 
 }
 
@@ -475,7 +480,7 @@ ul .slider{
 
 .tab-left{
     position: absolute;
-    margin-left: 71rem;
+    margin-left: 82rem;
 }
 
 .rectangle, 
@@ -485,7 +490,7 @@ ul .slider{
     display: none;
 }
 
-@media only screen and (max-width: 820px) and (min-width: 768px)
+@media screen and (max-width: 768px) 
 {
 
     .slide-show, 
@@ -523,6 +528,7 @@ ul .slider{
         width: 573px;
         margin-left: 5.5rem;
         margin-top: 4.5rem;
+        height: 720px;
     }
 
     #image1{
@@ -556,11 +562,12 @@ ul .slider{
         align-items: center;
     }
 
-    .hero-welcome span{
+    .hero-welcome{
         width: 581px;
         height: 140px;
         font-size: 125px;
-        margin: 1rem 0 0 -4rem;
+        margin-left: 5rem;
+        letter-spacing: -3px;
         align-items: center;
     }
 
@@ -577,7 +584,8 @@ ul .slider{
     }
 
     .arc-studio-text{
-        margin: 5rem 0 0 -38rem;
+        margin-left: -44rem;
+        margin-top: 5rem;
     }
 
     .image{
@@ -716,7 +724,7 @@ ul .slider{
 
     
 }
-@media only screen and (max-width: 480px) and (min-width: 375px){
+@media screen and (max-width: 480px){
  
     .line,
     .slide-show,
@@ -734,6 +742,11 @@ ul .slider{
     }
 
          /* mob-menu */
+    .arch-logo{
+        margin-top: 1rem;
+        margin-left: 6rem;
+    }
+
     .mob-menu{
         height: 1rem;
     }
@@ -766,13 +779,13 @@ ul .slider{
     .wrapper-container{
         margin-left: -0.5rem;
         width: 375px;
-        height: 560px;
+        /* height: 560px; */
         margin-top: 3rem;
     }
 
     #image1{
         width: 375px;
-        height: 560px;
+        /* height: 560px; */
         
     }
 
@@ -817,13 +830,13 @@ ul .slider{
     }
 
     .image{
-        width: 375px;
+        width: 358px;
         height: 560px;
         margin-left: -0.5rem;
     }
 
     .overlay{
-        width: 375px;
+        width: 358px;
         height: 560px;
     }
 
@@ -842,7 +855,7 @@ ul .slider{
 
     .wrapper-featured-section{
         width: 311px;
-        margin-left: 1.5rem;
+        margin-left: -1rem;
     }
 
     .wrapper-image-txt{
@@ -899,13 +912,14 @@ ul .slider{
     .text-left-txt{
         display: flex;
         width: 311px;
+        margin: 2rem;
     }
 
     .footer-container{
         display: flex;
         flex-direction: column;
         height: 443px;
-        width: 371px;
+        width: 357px;
         margin-left: -0.4rem;
         margin-top: 15rem;
     }
