--- a/component/pages/contact.html
+++ b/component/pages/contact.html
@@ -21,7 +21,7 @@
 
                           <!-- LOGO  -->
 
-    <section class="top-logo">
+    <!-- <section class="top-logo"> -->
       <div class="arch-logo">
         <a href="/index.html"><img class="arch-image" src="/component/assets/logo.svg" alt=""></a>
       </div>
